# workflow-example

./: .gitignore  pyproject.toml  requirements.txt
monthly_ndvi_calculation/: README.md  items.json  ndvi_calc.ipynb  ndvi_calculation.py
monthly_ndvi_calculation/boundary/: australia.geojson  wageningen.geojson
ndvi_clustering/: README.md  ndvi_clustering.ipynb  ndvi_clustering.py  ndvi_clustering_simplified.ipynb  test_ndvi_clustering.py
ndvi_clustering/output/: clustered_ndvi.tif
