[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.14",
    "dask>=2025.7.0",
    "distributed>=2025.7.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "odc-stac>=0.4.0",
    "pystac-client>=0.9.0",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.7.1",
]
