[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "dask",
    "distributed",
    "geopandas",
    "ipykernel",
    "matplotlib",
    "odc-stac",
    "pystac-client",
    "rioxarray",
    "scikit-learn",
]

[tool.uv.sources]
geobench = { git = "https://github.com/ITC-CRIB/geobench" }
